--- a/style.css
+++ b/style.css
@@ -1,169 +1,235 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Spartan", sans-serif; 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Spartan", sans-serif;
 }
-h1{
-    font-size: 50px; 
-    line-height: 64px;
-    color: #222;
+h1 {
+  font-size: 50px;
+  line-height: 64px;
+  color: #222;
 }
-h2{
-    font-size: 46px;
-    line-height: 54px;
-    color: #222;
+h2 {
+  font-size: 46px;
+  line-height: 54px;
+  color: #222;
 }
-h4{
-    font-size: 20px;
-    color: #222;
+h4 {
+  font-size: 20px;
+  color: #222;
 }
-h6{
-    font-size: 12px;
-    font-weight: 700;
+h6 {
+  font-size: 12px;
+  font-weight: 700;
 }
-p{
-    font-size: 16px;
-    color: #465b52;
-    margin: 15px 0 20px 0;
+p {
+  font-size: 16px;
+  color: #465b52;
+  margin: 15px 0 20px 0;
 }
-.section-p1{
-    padding: 40px 80px;
+.section-p1 {
+  padding: 40px 80px;
 }
-.section-m1{
-    margin: 40px 0;
+.section-m1 {
+  margin: 40px 0;
 }
 body {
-    width: 100%;
+  width: 100%;
 }
 
-#header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 18px;
-    background-color: #e3e6f6;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
-
+#header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 18px;
+  background-color: #e3e6f6;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
-#navbar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-#navbar li{
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
+#navbar li {
+  list-style: none;
+  padding: 0 20px;
+  position: relative;
 }
-#navbar li a{
-    text-decoration: none;
-   font-weight: 600;
-    font-size: 16px;
-    color: #222;
-    transition: 0.3s ease;
+#navbar li a {
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  color: #222;
+  transition: 0.3s ease;
 }
 #navbar li a:hover,
-#navbar li a.active{
-    color: #87a7be;
+#navbar li a.active {
+  color: #87a7be;
 }
 
 #navbar li a.active::after,
-#navbar li a:hover::after{
-    content: "";
-    width: 30%;
-    height: 2px;
-    background-color: #87a7be;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-
+#navbar li a:hover::after {
+  content: "";
+  width: 30%;
+  height: 2px;
+  background-color: #87a7be;
+  position: absolute;
+  bottom: -4px;
+  left: 20px;
 }
 
-#hero{
-    background-image: url(img/hero4.png);
-    height: 88.5vh;
-    width: 100%;
-    background-size: cover;
-    /* background-position: top 25% left 90% ; */
-    background-position: top 25% right 0 ;
-    padding: 0 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-
+#hero {
+  background-image: url(img/hero4.png);
+  height: 88.5vh;
+  width: 100%;
+  background-size: cover;
+  /* background-position: top 25% left 90% ; */
+  background-position: top 25% right 0;
+  padding: 0 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
-#hero h4{
-    padding-bottom: 15px;
+#hero h4 {
+  padding-bottom: 15px;
 }
-#hero h2{
-    color: #088178;
+#hero h2 {
+  color: #088178;
 }
-#hero button{
-    background-image:url(img/button.png) ;
-    background-size: cover;
-    background-color: transparent;
-    color: #088178;
-    border: none;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 14px 80px 14px 65px;
-    background-repeat: no-repeat;
-    cursor: pointer;
+#hero button {
+  background-image: url(img/button.png);
+  background-size: cover;
+  background-color: transparent;
+  color: #088178;
+  border: none;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 14px 80px 14px 65px;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
-
 
 #feature {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
-#feature .fe-box{
-    width: 180px;
+#feature .fe-box {
+  width: 180px;
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+  border: 1px solid #cce7d0;
+  margin: 15px 0;
+}
+#feature .fe-box:hover {
+  box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+}
+#feature .fe-box img {
+  margin-bottom: 10px;
+  width: 100%;
+}
+#feature .fe-box h6 {
+  display: inline-block;
+  padding: 9px 8px 6px 8px;
+  line-height: 1;
+  border-radius: 4px;
+  color: #088178;
+  background-color: #fddde4;
+}
+
+#feature .fe-box:nth-child(2) h6 {
+  background-color: #cdebbc;
+}
+#feature .fe-box:nth-child(3) h6 {
+  background-color: #d1e8f2;
+}
+
+#feature .fe-box:nth-child(4) h6 {
+  background-color: #cdd4f8;
+}
+#feature .fe-box:nth-child(5) h6 {
+  background-color: #f6dbf6;
+}
+#feature .fe-box:nth-child(6) h6 {
+  background-color: #fff2e5;
+}
+
+#products .heading{
     text-align: center;
-    padding: 25px 15px;
-    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
-    border: 1px solid #cce7d0;
-    margin: 15px 0;
 }
-#feature .fe-box:hover{
-    box-shadow: 10px 10px 54px rgba(70,62,221,0.1);
-}
-#feature .fe-box img{
-    margin-bottom: 10px;
-    width: 100%;
-}
-#feature .fe-box h6{
-    display: inline-block;
-    padding: 9px 8px 6px 8px;
-    line-height: 1;
-    border-radius: 4px;
-    color: #088178;
-    background-color: #fddde4;
+#products .all-product{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-#feature .fe-box:nth-child(2) h6{
-    background-color:#cdebbc ;
+#products .item1{
+  width: 23%;
+  min-width: 250px;
+  padding: 10px 12px;
+  border: 1px solid #696a69;
+  border-radius: 25px;
+  cursor: pointer;
+  box-shadow: 20px 20px rgba(0, 0, 0, 0.02);
+  transition: 0.2s ease;
+  margin: 15px 0  ;
+  position: relative;
 }
-#feature .fe-box:nth-child(3) h6{
-    background-color:#d1e8f2 ;
+#products .item1:hover{
+   box-shadow: 20px 20px rgba(0, 0, 0, 0.06);
 }
 
-#feature .fe-box:nth-child(4) h6{
-    background-color: #cdd4f8;
+#products .item1 img{
+  width: 100%;
+  border: 20px;
+  border-radius: 25px;
 }
-#feature .fe-box:nth-child(5) h6{
-    background-color: #f6dbf6 ;
+#products .dis{
+  text-align: start;
+   padding: 10px;
 }
-#feature .fe-box:nth-child(6) h6{
-    background-color: #fff2e5 ;
+#products .dis span{
+  color: #606063;
+  font-size: 12px;
+}
+#products .dis h5{
+  padding-top: 7px;
+  font-size: 14px;
+  color: #1a1a1a;
+}
+#products .dis i{
+  font-size: 18px;
+  color:rgb(243, 181, 25)
+}
+#products .dis h4{
+  padding-top: 7px;
+  font-weight: 700;
+  color: #088171;
+  font-size: 15px;
+}
+#products .cart{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 50px;
+  background-color: #e8f6ea;
+  font-weight: 500;
+  color: #088171;
+  border: 1px solid #cce7d0;
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+  
+  display: flex;
+  align-items: center;  
+  justify-content: center;
+ 
 }
