--- a/style.css
+++ b/style.css
@@ -37,6 +37,18 @@ p {
 body {
   width: 100%;
 }
+button.normal{
+  font-size: 14px;
+  font-weight: 600;
+  padding: 15px 30px;
+  color: #000;
+  background-color: #fff;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.2s;
+}
 
 #header {
   display: flex;
@@ -116,6 +128,7 @@ body {
 }
 
 #feature {
+
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -161,6 +174,8 @@ body {
 #feature .fe-box:nth-child(6) h6 {
   background-color: #fff2e5;
 }
+
+
 
 #products .heading{
     text-align: center;
@@ -232,4 +247,52 @@ body {
   align-items: center;  
   justify-content: center;
  
+}
+#banner{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-image: url(img/banner/b2.jpg);
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  background-position: center 
+}
+#banner h4{
+  color: #fff;
+  font-size: 16px;
+}
+#banner h2{
+  color: #fff;
+  font-size: 30px;
+  padding: 10px 0;
+}
+#banner h2 span{
+  color: crimson;
+}
+#banner button:hover{
+  background-color: #088171;
+  color: #fff;
+ 
+}
+#sm-banner{
+  display: flex;
+  justify-content: space-around;
+}
+#sm-banner .bannerbox{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 30px;
+  background-image: url(img/banner/b17.jpg);
+  min-width: 580px;
+  height: 50vh;
+  background-size: cover;
+  background-position: center 
+}
+#sm-banner .bannerbox button{
+  margin-top: 25px;
 }
