--- a/style.css
+++ b/style.css
@@ -427,3 +427,57 @@ button.normal{
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
 }
+#footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+#footer .col{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+#footer .logo{
+  margin-bottom: 30px;
+}
+#footer h4{
+  font-size: 14px;
+  padding-bottom: 20px;
+}
+#footer p{
+  font-size: 13px;
+  margin: 0 0 8px 0;
+
+}
+#footer a{
+  font-size: 13px;
+  text-decoration: none;
+  color: #222;
+  margin-bottom: 10px;
+}
+#footer .follow{
+  margin-top: 20px;
+}
+#footer .follow i{
+  color: #465b52;
+  padding-right: 4px;
+  cursor: pointer;
+}
+#footer .install .row img{
+  border: 1px solid #088178;
+  border-radius: 6px;
+}
+#footer .install img{
+  margin: 10PX 0 15PX 0;
+}
+#footer .follow i:hover,
+#footer a:hover{
+  color: #088178;
+}
+
+#footer .copyright{
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+}
