--- a/style.css
+++ b/style.css
@@ -52,7 +52,16 @@ button.normal{
 .special h2, .special h4{
   color: #fff;
 }
-
+body{
+  width: 100%;
+}
+#mobile{
+  display: none;
+  align-items: center;
+}
+#close{
+  display: none;
+}
 #header {
   display: flex;
   align-items: center;
@@ -177,9 +186,9 @@ button.normal{
 #feature .fe-box:nth-child(6) h6 {
   background-color: #fff2e5;
 }
-
-
-
+#products{
+  padding: 0 80px;
+}
 #products .heading{
     text-align: center;
 }
@@ -480,4 +489,111 @@ button.normal{
   width: 100%;
   text-align: center;
   margin-top: 10px;
+}
+
+
+@media (max-width:1024px) {
+  .section-p1 {
+  padding: 40px 40px;
+  }
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #e3e6f3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+   #navbar.active {
+    right: 0px;
+  }
+  #navbar li{
+    margin-bottom: 25px;
+  }
+
+  #sm-banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  #sm-banner .bannerbox1{
+    min-width: 100px;
+    height: 30vh;
+  }
+  #sm-banner .bannerbox2{
+    min-width: 100px;
+    height: 30vh;
+  }
+  #mobile{
+    display: flex;
+    align-items: center;
+    }
+  #mobile i {
+    color: #1a1a1a;
+    font-size: 24px;
+    padding-left: 20px;
+    
+  }
+  #close{
+    display: initial;
+    text-decoration: none;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+  #lg-bag{
+    display: none;
+  }
+  #hero {
+    height: 70vh;    
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+  }
+  #feature {
+      justify-content: center;
+  }
+  #feature .fe-box{
+    margin: 15px 15px;
+  }
+  #products .all-product {
+      justify-content: center;
+  }
+  #products .item1 {
+      margin: 15px;  
+  }
+  #banner {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      background-image: url(img/banner/b2.jpg);
+      width: 100%;
+      height: 20vh;
+      background-size: cover;
+      background-position: center;
+  }
+  #banner3 {
+      padding: 0 40px;
+  }
+  #banner3 .banner {
+    width: 30%;
+  }
+  #newsletter .form {
+      width: 70%;
+  }
+}
+
+@media (max-width:477px) {
+  
 }
