--- a/style.css
+++ b/style.css
@@ -595,5 +595,64 @@ body{
 }
 
 @media (max-width:477px) {
-  
+  .section-p1 {
+    padding: 20px;
+}
+  #header {
+    padding: 10px 30px;
+}
+#hero {
+    background-position: 60%;
+    padding: 0 20px;
+}
+h4 {
+    font-size: 15px;
+}
+h2 {
+    font-size: 23px;
+    line-height: 27px;
+}
+h1 {
+    font-size: 25px;
+    line-height: 32px;
+}
+p {
+    font-size: 15px;
+    font-weight: 600;
+    padding: 10px 40px 10px 45px;
+}
+#feature{
+  justify-content: space-between;
+}
+#feature .fe-box {
+    width: 155px;
+    margin: 0 0 15px 0;
+}
+p {
+    font-size: 10px;
+    color: #465b52;
+    margin: 0;
+}
+#products .all-product {
+    width: 100%;
+}
+#sm-banner .bannerbox1 {
+    margin-bottom: 10px;
+}
+#banner3 {
+    padding: 0 20px;
+}
+#banner3 .banner {
+    width: 100%;
+    height: 20vh;
+    margin-bottom: 10px;
+}
+    #newsletter .form {
+        width: 100%;
+    }
+#footer p {
+    font-size: 10px;
+    font-weight: 400;
+    padding: 0;
+}
 }
