--- a/style.css
+++ b/style.css
@@ -492,7 +492,43 @@ body{
 }
 
 
-@media (max-width:1024px) {
+/* dkpd */
+
+
+#page-header{
+  background-image: url(img/banner/b1.jpg);
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 14px;
+}
+#page-header h2,
+#page-header p {
+  color: #fff ;
+
+}
+#pagination{
+  text-align: center;
+}
+
+#pagination a{
+  text-decoration: none;
+  color: #fff;
+  background-color: #088178;
+  padding: 15px 20px;
+  border-radius: 4px;
+  font-weight: 600;
+}
+#pagination a i{
+  font-size: 17px;
+  font-weight: 600;
+}
+
+@media (max-width:1080px) {
   .section-p1 {
   padding: 40px 40px;
   }
@@ -650,9 +686,11 @@ p {
     #newsletter .form {
         width: 100%;
     }
-#footer p {
+
+    #footer p {
     font-size: 10px;
     font-weight: 400;
     padding: 0;
-}
+    }
+
 }
